<resources>
    <string name="app_name">Xpense</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_conversation_button">Add Conversation Button</string>
    <string name="message_read_status">Message Read Status</string>
    <string name="default_notification_channel_id">Channel_Message_Notification</string>
    <string name="other_notification_channel_id">Other_Message_Notification</string>
    <string name="dialog_handle">Dialog handle</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="transition_name_add_transaction">addTransaction</string>
    <string name="pie_details">Pie Details</string>
    <string name="bank_logo">Bank logo</string>
    <string name="no_data_provided">No data provided</string>
    <string name="analytics">Analytics</string>
    <string name="total_spent">Total spent</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="all_month">All month</string>
    <string name="show_data_for_selected_month">Show data for selected month</string>
    <string name="apply">Apply</string>
    <string name="this_month">This Month</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="analytics_type">Analytics type</string>
    <string name="this_year">This Year</string>
    <string name="annually">Annually</string>
    <string name="add_transaction_add_btn">Add</string>
    <string name="add_transaction_update_btn">Update</string>
    <string name="add_transaction_fragment_toolbar_new">New Transaction</string>
    <string name="add_transaction_fragment_toolbar_edit">Edit Transaction</string>
    <integer name="transition_duration_millis">600</integer>
    <integer name="categories_insert_animation_duration">400</integer>
    <integer name="categories_insert_slide_right_animation_duration">400</integer>
</resources>