<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_bg_color"
    android:transitionName="barChartCard"
    tools:context=".fragments.BarDetailsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                app:icon="@drawable/ic_round_arrow_back_ios_24"
                app:iconGravity="start"
                app:iconPadding="0dp"
                app:iconSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/backBtn"
                android:text="@string/analytics"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <RelativeLayout
                android:id="@+id/monthLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dateChipCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/dateChip"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_gravity="center_vertical"
                        android:checkable="false"
                        android:elevation="0dp"
                        android:minHeight="0dp"
                        android:textSize="14sp"
                        app:chipBackgroundColor="@color/cards_bg_color"
                        app:chipIcon="@drawable/ic_round_date_range_24"
                        app:chipIconEnabled="true"
                        app:chipIconTint="@color/sharedIconTintColor"
                        app:chipMinTouchTargetSize="0dp"
                        app:iconEndPadding="8dp"
                        app:iconStartPadding="8dp"
                        tools:text="August 2022" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/monthCard"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="0dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/chip_card_bg_color"
                    app:strokeWidth="0dp"
                    tools:visibility="visible">

                    <HorizontalScrollView
                        android:id="@+id/monthHorizontalScroll"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_gravity="center_vertical"
                        android:scrollbarSize="0dp">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/monthChipGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            app:chipSpacing="2dp"
                            app:selectionRequired="true"
                            app:singleSelection="true" />

                    </HorizontalScrollView>

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/barChartCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/monthLayout"
                android:layout_marginStart="12dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="12dp"
                app:cardBackgroundColor="@color/cards_bg_color"
                app:cardCornerRadius="@dimen/main_cards_corner_radius"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/totalAmountTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="RON 3009" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/total_spent"
                        android:textSize="12sp" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChart"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:layout_marginBottom="12dp"
                        android:transitionName="pieChart" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/periodCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/chip_card_bg_color"
                        app:strokeWidth="0dp">

                        <com.google.android.material.chip.ChipGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:chipSpacing="2dp"
                            app:selectionRequired="true"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/last7DaysChip"
                                style="@style/Widget.Material3.Chip.Assist"
                                android:layout_width="wrap_content"
                                android:layout_height="32dp"
                                android:checkable="true"
                                android:checked="true"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/last_7_days"
                                app:chipBackgroundColor="@color/bar_details_chip_state_list"
                                app:chipMinTouchTargetSize="0dp"
                                app:chipStrokeWidth="0dp" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/allMonthChip"
                                style="@style/Widget.Material3.Chip.Assist"
                                android:layout_width="wrap_content"
                                android:layout_height="32dp"
                                android:checkable="true"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/all_month"
                                app:chipBackgroundColor="@color/bar_details_chip_state_list"
                                app:chipMinTouchTargetSize="0dp"
                                app:chipStrokeWidth="0dp" />

                        </com.google.android.material.chip.ChipGroup>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/barChartCard"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                tools:itemCount="8"
                tools:listitem="@layout/item_expense_category" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>